@@ -10,6 +10,8 @@ What's New in Python 2.5 alpha 1?
 Core and builtins
 -----------------
 
+- Patch #1115086: Support PY_LONGLONG in structmember.
+
 - Bug #1155938: new style classes did not check that __init__() was
   returning None.
 
